Components/DirectXSoundSystem/DirectSoundNativeWrapper/DirectSoundNativeWrapper.h

typedef unsigned int uint;
///////////////////////////////////////////////////////////////////////////////////////////////

struct DSoundStructureSizes
{
public:

	int sizeWAVEFORMATEX;
	int sizeGUID;
	int sizeDSBUFFERDESC;
	int sizeDSBCAPS;
	int sizeDSCBCAPS;
	int sizeDSCBUFFERDESC;
	int sizeDS3DLISTENER;

	void Init()
	{
		sizeWAVEFORMATEX = sizeof( WAVEFORMATEX );
		sizeGUID = sizeof( GUID );
		sizeDSBUFFERDESC = sizeof( DSBUFFERDESC );
		sizeDSBCAPS = sizeof( DSBCAPS );
		sizeDSCBCAPS = sizeof( DSCBCAPS );
		sizeDSCBUFFERDESC = sizeof( DSCBUFFERDESC );
		sizeDS3DLISTENER = sizeof( DS3DLISTENER );
	}
};
///////////////////////////////////////////////////////////////////////////////////////////////

EXPORT void DSound_GetStructureSizes( DSoundStructureSizes* sizes )
{
	DSoundStructureSizes originalSizes;
	originalSizes.Init();
	*sizes = originalSizes;
}
EXPORT int DSound_CoInitialize(void* pvReserved)
{
	return CoInitialize(pvReserved);
}
EXPORT int DSound_DirectSoundCreate8( LPCGUID pcGuidDevice,
	LPDIRECTSOUND8* ppDS8, LPUNKNOWN pUnkOuter )
{
	return DirectSoundCreate8(pcGuidDevice, ppDS8, pUnkOuter);
}
EXPORT int DSound_Get_DSERR_BUFFERLOST()
{
	return DSERR_BUFFERLOST;
}
EXPORT int DSound_Get_DSERR_NODRIVER()
{
	return DSERR_NODRIVER;
}
EXPORT int DSound_DirectSoundCaptureCreate( LPCGUID pcGuidDevice,
	LPDIRECTSOUNDCAPTURE* ppDSC, LPUNKNOWN pUnkOuter )
{
	return DirectSoundCaptureCreate(pcGuidDevice, ppDSC, pUnkOuter);
}
EXPORT int DSound_DirectSoundCaptureEnumerateW( LPDSENUMCALLBACKW pDSEnumCallback, void* pContext )
{
	#ifndef _UNICODE
		#error need unicode
	#endif

	return DirectSoundCaptureEnumerate(pDSEnumCallback, pContext);
}
EXPORT const WCHAR* DSound_DXGetErrorStringW( int hr )
{
	#ifndef _UNICODE
		#error need unicode
	#endif

	const WCHAR* str = DXGetErrorString(hr);
	if(!str)
		return NULL;
	return CreateOutString(str);
}
///////////////////////////////////////////////////////////////////////////////////////////////

EXPORT uint NIDirectSound8_Release( IDirectSound8* _this )
{
	return _this->Release();
}
EXPORT int NIDirectSound8_CreateSoundBuffer( IDirectSound8* _this,
	LPCDSBUFFERDESC pcDSBufferDesc, LPDIRECTSOUNDBUFFER* ppDSBuffer, LPUNKNOWN pUnkOuter )
{
	return _this->CreateSoundBuffer(pcDSBufferDesc, ppDSBuffer, pUnkOuter);
}
EXPORT int NIDirectSound8_DuplicateSoundBuffer( IDirectSound8* _this,
	LPDIRECTSOUNDBUFFER pDSBufferOriginal, LPDIRECTSOUNDBUFFER* ppDSBufferDuplicate )
{
	return _this->DuplicateSoundBuffer(pDSBufferOriginal, ppDSBufferDuplicate);
}
EXPORT int NIDirectSound8_SetCooperativeLevel( IDirectSound8* _this, HWND hWnd, uint dwLevel )
{
	return _this->SetCooperativeLevel(hWnd, dwLevel);
}
///////////////////////////////////////////////////////////////////////////////////////////////

EXPORT uint NIDirectSound3DListener_Release( IDirectSound3DListener* _this )
{
	return _this->Release();
}
EXPORT int NIDirectSound3DListener_GetAllParameters( IDirectSound3DListener* _this,
	LPDS3DLISTENER pListener )
{
	return _this->GetAllParameters(pListener);
}
EXPORT int NIDirectSound3DListener_SetAllParameters( IDirectSound3DListener* _this,
	LPCDS3DLISTENER pListener, uint dwApply )
{
	return _this->SetAllParameters(pListener, dwApply);
}
///////////////////////////////////////////////////////////////////////////////////////////////

EXPORT int NIDirectSoundBuffer_QueryInterface( IDirectSoundBuffer* _this,
	REFIID pGuid, LPVOID* pInterface )
{
	return _this->QueryInterface(pGuid, pInterface);
}
EXPORT uint NIDirectSoundBuffer_Release( IDirectSoundBuffer* _this )
{
	return _this->Release();
}
EXPORT int NIDirectSoundBuffer_GetCaps( IDirectSoundBuffer* _this, LPDSBCAPS pDSCaps )
{
	return _this->GetCaps(pDSCaps);
}